temporarily removes animate and resizes font to avoid overflow of text

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -239,7 +239,7 @@ body {
       @include centerer;
       font-family: $sixCaps;
       color: $gray;
-      font-size: 4em;
+      font-size: 3em;
       line-height: 110%;
       padding: 5% 0;
       max-height: 240px;
